<resources>
    <string name="app_name">Candy Shop</string>
    <string name="logo">Logo</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="login_bg">Background</string>
    <string name="welcome_text">Welcome to Candy Shop</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Mobile number</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="forgetPass">Forget Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="login_google">Login with Google</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_twitter">Login with Twitter</string>
    <string name="start_img">On boarding photos</string>
    <string name="start_txtOffers">Tasty Offers</string>
    <string name="start_txtPayment">Easy Payment</string>
    <string name="start_txtDelivery">Fast Delivery</string>
    <string name="description_Offers">Chocolates, gift sets, lollipops, airy cakes and much more sweets.
        Get 5% discount on your first order.</string>
    <string name="description_Payment">Your Shopping got even easier with Easy and Fast online Payment.
        Free tax for the first three payments.</string>
    <string name="description_Delivery">Here you can order delicious sweets with fast delivery to your home.
        Start Shopping Now and Enjoy!</string>
    <string name="btn_next">&#62;</string>
    <string name="btn_previous">&#60;</string>
    <string name="start_btn_text">Get Started</string>
    <string name="user_name">Jessica Brain</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="wish_list">Wish List</string>
    <string name="all_category">All category</string>
    <string name="coupons">Coupons</string>
    <string name="offers">Offers</string>
    <string name="other">Other</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="category1">Chocolate</string>
    <string name="category2">Cake</string>
    <string name="category3">Muffin</string>
    <string name="category4">Candy</string>
    <string name="category5">Cookie</string>
    <string name="category6">Lollipop</string>
    <string name="price">Price: 2$</string>
    <string name="item_name">Milka chocolate</string>
    <string name="add_to_wish_list">Add To Wish List</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="rate">Rate</string>
    <string name="about">Candy Shop is app for OS Android. App designer and developer - Alina Peicheva.
        Faculty number: 1801681098. For contacts: alina.peycheva@gmail.com</string>
    <string name="copyright">&#169; Copyright 2021 by Alina Peicheva</string>
</resources>