<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/offers"
                android:contentDescription="@string/start_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_txtOffers"
                android:textColor="@color/colorPrimary"
                android:autoSizeTextType="uniform"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView1"
                app:layout_constraintVertical_bias="0.08" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="40dp"
                android:text="@string/description_Offers"
                android:textAlignment="center"
                android:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1"
                app:layout_constraintVertical_bias="0.08" />

            <Button
                android:id="@+id/btn_next_scr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btn_next"
                android:textColor="@color/colorPrimary"
                android:autoSizeMaxTextSize="124sp"
                android:autoSizeMinTextSize="16sp"
                android:autoSizeStepGranularity="12sp"
                android:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/payment"
                android:contentDescription="@string/start_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_txtPayment"
                android:textColor="@color/colorPrimary"
                android:autoSizeTextType="uniform"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.08"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="40dp"
                android:text="@string/description_Payment"
                android:textAlignment="center"
                android:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.08" />

            <Button
                android:id="@+id/btn_previous_scr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_previous"
                android:autoSizeMaxTextSize="124sp"
                android:autoSizeMinTextSize="16sp"
                android:autoSizeStepGranularity="12sp"
                android:autoSizeTextType="uniform"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />

            <Button
                android:id="@+id/btn_next_scr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:autoSizeMaxTextSize="124sp"
                android:autoSizeMinTextSize="16sp"
                android:autoSizeStepGranularity="12sp"
                android:autoSizeTextType="uniform"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/delivery"
                android:contentDescription="@string/start_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_txtDelivery"
                android:textColor="@color/colorPrimary"
                android:autoSizeTextType="uniform"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.08"  />

            <TextView
                android:layout_alignTop="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="40dp"
                android:text="@string/description_Delivery"
                android:textAlignment="center"
                android:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.08"/>

            <Button
                android:id="@+id/btn_previous_scr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_previous"
                android:autoSizeMaxTextSize="124sp"
                android:autoSizeMinTextSize="16sp"
                android:autoSizeStepGranularity="12sp"
                android:autoSizeTextType="uniform"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ViewFlipper>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/btn_bg"
        android:contentDescription="@string/login"
        android:text="@string/start_btn_text"
        android:autoSizeMaxTextSize="102sp"
        android:autoSizeMinTextSize="16sp"
        android:autoSizeStepGranularity="12sp"
        android:autoSizeTextType="uniform"
        android:textStyle="bold"/>
</FrameLayout>